# swing-agent

./: .gitignore  README.md  discord_bot.py  discord_response.py  discord_sessions.py  options-income.prompt.md  options-strategy.prompt.md  requirements.txt
.github/: copilot-instructions.md
database/: pyproject.toml
database/migrations/: 20260310_add_automation_action_intents.sql  20260310_add_automation_tables.sql  20260310_add_portfolio_tracking_tables.sql  20260310_add_symbol_availability_table.sql  20260310_widen_symbol_columns.sql
database/src/swing_agent_database/: __init__.py  automation_store.py  config.py  env_helpers.py  mcp_discovery.py  portfolio_store.py  price_store.py  symbol_availability.py
docker/: docker-compose.yml
docs/: 2026-03-10-live-readiness-summary.md
mcp-services/edgar-mcp/: Dockerfile
mcp-services/price-data-mcp/: Dockerfile  pyproject.toml
mcp-services/price-data-mcp/src/price_data_mcp/: analysis.py  config.py  db.py  server.py
mcp-services/yahoo-finance-mcp/: Dockerfile
services/schwab-automation/: Dockerfile  README.md  pyproject.toml
services/schwab-automation/cron/: entrypoint.sh  run_hourly.sh  schwab-automation.cron
services/schwab-automation/src/schwab_automation/: analysis.py  candidate_discovery.py  config.py  copilot_runner.py  execution.py  llm_actions.py  main.py  notifier.py  option_candidates.py  sync.py
services/schwab-automation/src/schwab_automation/prompts/: options-income-automation.prompt.md  options-income-candidate.prompt.md
services/schwab-automation/tests/: test_live_guardrails.py  test_reporting.py  test_roll_support.py  test_symbol_universe.py  test_trading_window.py
services/schwab-price-sync/: Dockerfile  README.md  pyproject.toml
services/schwab-price-sync/cron/: entrypoint.sh  run_frequent_sync.sh  run_hourly_sync.sh  run_missing_sync.sh  schwab-price-sync.cron
services/schwab-price-sync/src/schwab_price_sync/: __init__.py  config.py  load_token.py  main.py  models.py  repository.py  schwab_client.py  sync.py
