[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-agent-database"
version = "0.1.0"
description = "Shared database access package for swing-agent services"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "SQLAlchemy>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]