[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-data-mcp"
version = "0.1.0"
description = "Read-only MCP server for OHLCV price data and technical analysis"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "pandas>=2.2.0",
  "psycopg[binary]>=3.2.0",
  "SQLAlchemy>=2.0.0",
  "ta>=0.11.0",
]

[project.scripts]
price-data-mcp = "price_data_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
